--- a/frontend/svelte-app/package.json
+++ b/frontend/svelte-app/package.json
@@ -9,6 +9,8 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
+    "@event-calendar/core": "^3.6.1",
+    "@event-calendar/day-grid": "^3.6.1",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.0",
