--- a/frontend/svelte-app/package.json
+++ b/frontend/svelte-app/package.json
@@ -18,9 +18,10 @@
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.2.2",
-    "svelte": "^3.55.0"
+    "svelte": "^3.59.2"
   },
   "dependencies": {
+    "firebase": "^11.0.1",
     "sirv-cli": "^2.0.0",
     "svelte-spa-router": "^4.0.1"
   }
